--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.9",
+    "util": "^0.12.5"
   }
 }
