--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "mongoose": "^8.9.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
+    "shortid": "^2.2.16",
     "util": "^0.12.5"
   }
 }
